# ash-tetris

./: .gitignore  CMakeLists.txt  README.md
src/: collision_model.cpp  collision_model.h  figure.cpp  figure.h  figure.hpp  figure_ext.cpp  figure_ext.h  game_play.cpp  game_play.h  main.cpp
src/figures/: line.cpp  line.h  n_figure.cpp  n_figure.h  square.cpp  square.h  t_figure.cpp  t_figure.h  u_figure.cpp  u_figure.h
